prevent clicked mobile state on grid from overflow

--- a/static/css/src/components/_grid.scss
+++ b/static/css/src/components/_grid.scss
@@ -28,21 +28,21 @@
 
     .item {
         width: 100%;
-        padding: 8px 0;
+        margin: 8px 0;
         opacity: 0;
 
         &:last-child {
-            padding-bottom: 15px;
+            margin-bottom: 15px;
         }
 
         @media only screen and (min-width: 480px) {
-            padding: 10px;
+            margin: 10px;
         }
 
         @media only screen and (min-width: 768px) {
-            padding: 10%;
+            margin: 10%;
             &:last-child {
-                padding-bottom: 0;
+                margin-bottom: 0;
             }
         }
 
@@ -51,7 +51,7 @@
         }
 
         &:first-child {
-            padding-top: 0;
+            margin-top: 0;
         }
 
         &.show-meta {
